feat(frontend): added apiKey settings

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "Benutzerauthentifizierung fehlgeschlagen",
   "docspace.error.loading": "Fehler beim Laden von ONLYOFFICE DocSpace",
   "docspace.error.payment": "Das Erstellen dieses Raums ist nicht möglich, da das Limit für die Anzahl der Räume in Ihrem aktuellen Plan erreicht ist.",
-  "docspace.error.csp": "Die aktuelle Domäne ist nicht in den Einstellungen der Content Security Policy (CSP) festgelegt. Bitte fügen Sie sie über den Abschnitt Entwickler-Tools hinzu.",
-  "docspace.link.developer-tools": "Abschnitt Entwickler-Tools",
   "docspace.link.payments": "Preisplan aktualisieren",
   "docspace.roles.guest": "Gast",
   "docspace.room.type.collaboration": "Raum für Zusammenarbeit",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "Der angegebene Benutzer ist kein ONLYOFFICE DocSpace-Administrator",
   "settings.connection.saving.error.forbidden.guest": "Der angegebene Benutzer darf kein Gast sein",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace-Einstellungen wurden gespeichert",
   "settings.connection.disconnection.description": "Sind Sie sicher, dass Sie die Verbindung zu ONLYOFFICE DocSpace unterbrechen wollen? Dies hat zur Folge, dass alle Verbindungen zwischen Deals und DocSpace-Räumen verloren gehen. Außerdem werden alle Benutzerautorisierungsdaten gelöscht.",
   "settings.connection.disconnection.ok": "Verbindung zu ONLYOFFICE DocSpace erfolgreich unterbrochen",
   "settings.connection.disconnection.error": "Die Verbindung zu ONLYOFFICE DocSpace konnte nicht unterbrochen werden.",
   "settings.connection.title": "Konfigurieren Sie die Verbindungseinstellungen der ONLYOFFICE DocSpace-App",
-  "settings.connection.hint.csp.title": "CSP-Einstellungen überprüfen",
-  "settings.connection.hint.csp.message": "Bevor Sie die App verbinden, gehen Sie bitte zu <semibold>{{path}}</semibold> und fügen Sie die folgenden Anmeldeinformationen zur Zulassungsliste hinzu",
-  "settings.connection.hint.csp.path": "DocSpace Einstellungen - Entwickler-Tools - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Adresse von Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpace App",
   "settings.connection.inputs.address": "Adresse von ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.title": "",
+  "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "Verbindung"
 }
