--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
   "docspace.error.payment": "Creating this room is not possible since the limit is reached for the number of rooms included in your current plan.",
-  "docspace.error.csp": "The current domain is not set in the Content Security Policy (CSP) settings. Please add it via the Developer Tools section.",
-  "docspace.link.developer-tools": "Developer Tools section",
   "docspace.link.payments": "Upgrade plan",
   "docspace.roles.guest": "Guest",
   "docspace.room.type.collaboration": "Collaboration room",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "The specified user is not a ONLYOFFICE DocSpace administrator",
   "settings.connection.saving.error.forbidden.guest": "The specified user should not be Guest",
   "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace cannot be reached",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "DocSpace API Key is invalid",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "DocSpace API Key owner is not DocSpace Admin",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
   "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfully disconnected",
   "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
   "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
-  "settings.connection.hint.csp.title": "Check the CSP settings",
-  "settings.connection.hint.csp.message": "Before connecting the app, please go to the <semibold>{{path}}</semibold> and add the following credentials to the allow list",
-  "settings.connection.hint.csp.path": "DocSpace Settings - Developer tools - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Pipedrive portal address",
-  "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpace app",
   "settings.connection.inputs.address": "ONLYOFFICE DocSpace address",
+  "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Key",
+  "settings.connection.inputs.api-key.description": "API key author should be DocSpace admin and key should have access sopes(Profile - Read, Contacts - Write, Rooms - Write)",
   "settings.connection.menu-item": "Connection"
 }
