--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "Error de autenticación de usuario",
   "docspace.error.loading": "Error al cargar ONLYOFFICE DocSpace",
   "docspace.error.payment": "No es posible crear esta sala ya que se ha alcanzado el límite para el número de salas incluidas en su plan actual.",
-  "docspace.error.csp": "El dominio actual no está configurado en los ajustes de la Política de seguridad de contenidos (CSP). Por favor, añádalo a través de la sección Herramientas para desarrolladores.",
-  "docspace.link.developer-tools": "Sección Herramientas para desarrolladores",
   "docspace.link.payments": "Actualizar el plan",
   "docspace.roles.guest": "Invitado",
   "docspace.room.type.collaboration": "Sala de colaboración",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "El usuario especificado no es un administrador de ONLYOFFICE DocSpace",
   "settings.connection.saving.error.forbidden.guest": "El usuario especificado no debe ser Invitado",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.ok": "Los ajustes de ONLYOFFICE DocSpace se han guardado",
   "settings.connection.disconnection.description": "¿Está seguro que quiere desconectar ONLYOFFICE DocSpace? Esto resultará en que todas las conexiones entre Acuerdos y salas de DocSpace se perderán. Y también todos los datos de autorización de usuario se eliminarán.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace se ha desconectado correctamente",
   "settings.connection.disconnection.error": "No se ha podido desconectar ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar la configuración de conexión de la aplicación ONLYOFFICE DocSpace",
-  "settings.connection.hint.csp.title": "Comprobar la configuración CSP",
-  "settings.connection.hint.csp.message": "Antes de conectar la aplicación, por favor acceda a <semibold>{{path}}</semibold> y añada las siguientes credenciales a la lista de permitidos",
-  "settings.connection.hint.csp.path": "Ajustes de DocSpace - Herramientas para desarrolladores - SDK de JavaScript",
-  "settings.connection.hint.csp.pipedrive-adress": "Dirección del portal Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "Aplicación ONLYOFFICE DocSpace",
   "settings.connection.inputs.address": "Dirección de ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.title": "",
+  "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "Conexión"
 }
