--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "Échec de l'authentification de l'utilisateur",
   "docspace.error.loading": "Erreur de chargement d'ONLYOFFICE DocSpace",
   "docspace.error.payment": "La création de cette salle n'est pas possible puisque la limite est atteinte pour le nombre de salles incluses dans votre plan actuel.",
-  "docspace.error.csp": "Le domaine actuel n'est pas défini dans les paramètres de la politique de sécurité du contenu (CSP). Veuillez l'ajouter via la section Outils de développement.",
-  "docspace.link.developer-tools": "Section des outils de développement",
   "docspace.link.payments": "Mettre à jour le plan",
   "docspace.roles.guest": "Invité",
   "docspace.room.type.collaboration": "Salle de collaboration",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "L'utilisateur spécifié n'est pas un administrateur ONLYOFFICE DocSpace",
   "settings.connection.saving.error.forbidden.guest": "L'utilisateur spécifié ne doit pas être invité",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.ok": "Les paramètres d'ONLYOFFICE DocSpace ont été sauvegardés",
   "settings.connection.disconnection.description": "Souhaitez-vous déconnecter ONLYOFFICE DocSpace ? Cela entraînera la perte de toutes les connexions entre Deals et les salles DocSpace. De plus, toutes les données d'autorisation de l'utilisateur seront supprimées",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace a été déconnecté avec succès",
   "settings.connection.disconnection.error": "Impossible de déconnecter ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurez les paramètres de connexion de l'application ONLYOFFICE DocSpace",
-  "settings.connection.hint.csp.title": "Vérifier les paramètres du CSP",
-  "settings.connection.hint.csp.message": "Avant de connecter l'application, veuillez vous rendre dans le <semibold>{{path}}</semibold> et ajouter les informations d'identification suivantes à la liste des autorisations",
-  "settings.connection.hint.csp.path": "Paramètres de DocSpace - Outils de développement - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Adresse du portail Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "Application ONLYOFFICE DocSpace",
   "settings.connection.inputs.address": "Adresse d'ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.title": "",
+  "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "Connexion"
 }
