--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "Autenticazione utente fallita",
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
   "docspace.error.payment": "Non è possibile creare la stanza. È stato raggiunto il limite del numero di stanze incluse nel tuo piano attuale.",
-  "docspace.error.csp": "Il dominio corrente non è impostato nelle impostazioni della politica di sicurezza dei contenuti (CSP). Aggiungilo tramite la sezione Strumenti per sviluppatori.",
-  "docspace.link.developer-tools": "Sezione Strumenti per sviluppatori",
   "docspace.link.payments": "Esegui l'upgrade del tuo piano",
   "docspace.roles.guest": "Ospite",
   "docspace.room.type.collaboration": "Stanza di collaborazione",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "L'utente specificato non è un amministratore di ONLYOFFICE DocSpace",
   "settings.connection.saving.error.forbidden.guest": "L'utente specificato non deve essere Ospite",
   "settings.connection.saving.error.undefined": "Impossibile salvare le impostazioni di ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.ok": "Le impostazioni di ONLYOFFICE DocSpace sono state salvate",
   "settings.connection.disconnection.description": "Sei sicuro di voler disconnettere ONLYOFFICE DocSpace? Questo comporterà la perdita di tutte le connessioni tra Deals e le stanze DocSpace. Inoltre, tutti i dati di autorizzazione utente saranno eliminati.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace disconnesso con successo",
   "settings.connection.disconnection.error": "Impossibile disconnettere ONLYOFFICE DocSpace",
   "settings.connection.title": "Configura le impostazioni di connessione dell'app ONLYOFFICE DocSpace",
-  "settings.connection.hint.csp.title": "Controlla le impostazioni della politica di sicurezza dei contenuti (CSP)",
-  "settings.connection.hint.csp.message": "Prima di connettere l'app, vai su <semibold>{{path}}</semibold> e aggiungi le seguenti credenziali all'elenco di consentiti",
-  "settings.connection.hint.csp.path": "Impostazioni DocSpace - Strumenti per sviluppatori - SDK JavaScript",
-  "settings.connection.hint.csp.pipedrive-adress": "Indirizzo del portale Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "App ONLYOFFICE DocSpace",
   "settings.connection.inputs.address": "Indirizzo ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.title": "",
+  "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "Connessione"
 }
