--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "ユーザー認証に失敗しました",
   "docspace.error.loading": "ONLYOFFICE DocSpace の読み込みエラー",
   "docspace.error.payment": "現在ご契約中のプランのルーム数が上限に達しているため、このルームの作成はできません。",
-  "docspace.error.csp": "現在のドメインはコンテンツセキュリティポリシー (CSP) 設定に設定されていません。開発者ツールセクションから追加してください。",
-  "docspace.link.developer-tools": "開発者ツールセクション",
   "docspace.link.payments": "プランのアップグレード",
   "docspace.roles.guest": "ゲスト",
   "docspace.room.type.collaboration": "コラボレーションルーム",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "指定されたユーザーはONLYOFFICE DocSpace管理者ではありません",
   "settings.connection.saving.error.forbidden.guest": "指定したユーザーはゲストユーザーにできません",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace設定が保存されました",
   "settings.connection.disconnection.description": "ONLYOFFICE DocSpaceの接続を切断してもよろしいですか? これは、DealsとDocSpaceルーム間のすべての接続が失われることを意味します。また、すべてのユーザー認証データも削除されます。",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpaceの切断に成功しました",
   "settings.connection.disconnection.error": "ONLYOFFICE DocSpaceの切断に失敗しました",
   "settings.connection.title": "ONLYOFFICE DocSpaceアプリの接続設定を確認してください",
-  "settings.connection.hint.csp.title": "CSP設定を確認してください",
-  "settings.connection.hint.csp.message": "アプリを接続する前に、<semibold>{{path}}</semibold>に移動し、次の認証情報を許可リストに追加してください",
-  "settings.connection.hint.csp.path": "DocSpace設定 - 開発者ツール - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Pipedriveポータルアドレス",
-  "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpaceアプリ",
   "settings.connection.inputs.address": "ONLYOFFICE DocSpaceアドレス",
+  "settings.connection.inputs.api-key.title": "",
+  "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "接続"
 }
