--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "Falha na autenticação do usuário",
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
   "docspace.error.payment": "Não é possível criar esta sala, pois o limite foi atingido para o número de salas incluídas no seu plano atual.",
-  "docspace.error.csp": "O domínio atual não está definido nas configurações da Política de segurança de conteúdo (CSP). Adicione-o por meio da seção Ferramentas do desenvolvedor.",
-  "docspace.link.developer-tools": "Seção Ferramentas do desenvolvedor",
   "docspace.link.payments": "Plano de upgrade",
   "docspace.roles.guest": "Convidado",
   "docspace.room.type.collaboration": "Sala de colaboração",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "O usuário especificado não é um administrador do ONLYOFFICE DocSpace",
   "settings.connection.saving.error.forbidden.guest": "O usuário especificado não deve ser Convidado",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.ok": "As configurações do ONLYOFFICE DocSpace foram salvas",
   "settings.connection.disconnection.description": "Tem certeza de que deseja desconectar ONLYOFFICE DocSpace? Isso resultará na perda de todas as conexões entre as salas Deals e DocSpace. E também todos os dados de autorização do usuário serão excluídos.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace desconectado com sucesso",
   "settings.connection.disconnection.error": "Não foi possível desconectar o ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar as configurações de conexão do aplicativo ONLYOFFICE DocSpace",
-  "settings.connection.hint.csp.title": "Verificar as configurações do CSP",
-  "settings.connection.hint.csp.message": "Antes de conectar o aplicativo, acesse <semibold>{{path}}</semibold> e adicione as seguintes credenciais à lista de permissões",
-  "settings.connection.hint.csp.path": "Configurações do DocSpace - Ferramentas do desenvolvedor - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Endereço do portal Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "Aplicativo ONLYOFFICE DocSpace",
   "settings.connection.inputs.address": "Endereço do ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.title": "",
+  "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "Conexão"
 }
