--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -29,8 +29,6 @@
   "docspace.error.login": "Не удалось идентифицировать пользователя",
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
   "docspace.error.payment": "Комната не может быть создана, поскольку достигнут лимит на количество комнат, включенных в ваш текущий тарифный план.",
-  "docspace.error.csp": "Текущий домен не установлен в настройках Политики безопасности контента (CSP). Пожалуйста, добавьте его через раздел Инструменты разработчика.",
-  "docspace.link.developer-tools": "Раздел Инструменты разработчика",
   "docspace.link.payments": "Обновить тарифный план",
   "docspace.roles.guest": "Гость",
   "docspace.room.type.collaboration": "Комната для совместной работы",
@@ -63,16 +61,16 @@
   "settings.connection.saving.error.forbidden.not-admin": "Указанный пользователь не является администратором ONLYOFFICE DocSpace",
   "settings.connection.saving.error.forbidden.guest": "Указанный пользователь не должен являться Гостем",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace недоступен",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "DocSpace API ключ недействительный",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Владелец API ключа DocSpace не является администратором DocSpace",
   "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
   "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
   "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
   "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
-  "settings.connection.hint.csp.title": "Проверить настройки Политики безопасности контента (CSP)",
-  "settings.connection.hint.csp.message": "Перед подключением приложения, пожалуйста, перейдите к <semibold>{{path}}</semibold> и добавьте следующие реквизиты пользователя в список разрешений",
-  "settings.connection.hint.csp.path": "Настройки DocSpace – Инструменты разработчика - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Адрес портала Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "Приложение ONLYOFFICE DocSpace",
   "settings.connection.inputs.address": "Адрес ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Ключ",
+  "settings.connection.inputs.api-key.description": "Автором API ключа должен быть администратор DocSpace и ключ должен иметь права доступа (Профиль - Чтение, Контакты - Запись, Комнаты - Запись).",
   "settings.connection.menu-item": "Соединение"
 }
