--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -36,6 +36,8 @@
   "docspace.room.type.vdr": "Virtual Data room",
   "docspace.room.type.custom": "Custom room",
   "link.learn-more": "Learn more",
+  "notification.webhooks-is-not-active.header": "Synchronization Warning",
+  "notification.webhooks-is-not-active.text": "Synchronization between Deal followers and Room members is not performed because no Deal Admin has installed the plugin",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
   "room.create.description": "Create ONLYOFFICE DocSpace room to work with documents related to this deal. You will not be able to change the room type.",
