--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -39,6 +39,8 @@
   "link.learn-more": "Más información",
   "notification.webhooks-is-not-active.header": "",
   "notification.webhooks-is-not-active.text": "",
+  "notification.webhooks-is-not-active.help-text.admin": "",
+  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
   "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para trabajar con documentos relacionados con este acuerdo. No podrá cambiar el tipo de sala.",
