--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -39,6 +39,8 @@
   "link.learn-more": "詳しくはこちら",
   "notification.webhooks-is-not-active.header": "",
   "notification.webhooks-is-not-active.text": "",
+  "notification.webhooks-is-not-active.help-text.admin": "",
+  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件に関連するドキュメントを扱うためにONLYOFFICE DocSpaceルームを作成してください。ルームタイプを変更することはできませんので、ご注意ください。",
