--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -39,6 +39,8 @@
   "link.learn-more": "Per saperne di più",
   "notification.webhooks-is-not-active.header": "",
   "notification.webhooks-is-not-active.text": "",
+  "notification.webhooks-is-not-active.help-text.admin": "",
+  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
   "room.create.description": "Crea la stanza ONLYOFFICE DocSpace per lavorare con i documenti relativi a questo accordo. Non sarà possibile modificare il tipo di stanza",
