--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -41,6 +41,7 @@
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
   "room.create.description": "Create ONLYOFFICE DocSpace room to work with documents related to this deal. You will not be able to change the room type.",
+  "room.login.description": "Log in to ONLYOFFICE DocSpace to easily collaborate on the deal-related documents.",
   "room.request-access.ok": "You have been successfully granted access to the ONLYOFFICE DocSpace room",
   "room.request-access.error": "Error getting access to the ONLYOFFICE DocSpace room",
   "notification.system-user.not-found": "System User is not set.",
