--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -41,6 +41,7 @@
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
   "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para trabajar con documentos relacionados con este acuerdo. No podrá cambiar el tipo de sala.",
+  "room.login.description": "",
   "room.request-access.ok": "Se le ha concedido correctamente el acceso a la sala de ONLYOFFICE DocSpace",
   "room.request-access.error": "Error al acceder a la sala de ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "El usuario del sistema no está configurado.",
